RESOLVED FIXED154164
Do not expose -webkit-text CSS value in quirks mode
https://bugs.webkit.org/show_bug.cgi?id=154164
Summary Do not expose -webkit-text CSS value in quirks mode
Simon Pieters (:zcorpan)
Reported 2016-02-12 05:07:34 PST
What steps will reproduce the problem? 1. Go to http://software.hixie.ch/utilities/js/live-dom-viewer/?saved=3883 <style> body { color:red } div { color:green } span { color:-webkit-text } </style> <div><span>This should be green.</span></div> What is the expected output? What do you see instead? The text should be green. It's red. Please use labels and text to provide additional information. Spec https://quirks.spec.whatwg.org/#the-tables-inherit-color-from-body-quirk (Note in particular "a special value that has no keyword mapping to it.", meaning an author should not be able to trigger this behavior for other elements as in the test case.)
Attachments
Brent Fulgham
Comment 1 2022-07-14 15:23:24 PDT
This test case works properly in Safari 15.5+.
Ahmad Saleem
Comment 2 2022-09-23 13:30:28 PDT
I am able to reproduce this in Safari 16 and Safari Technology Preview 148 and using attached testcase, I get "red" color text compared to other browsers (Chrome Canary 108 and Firefox Nightly 107), in which I get "green" color text. @Brent - is it some regression? Thanks!
Tim Nguyen (:ntim)
Comment 3 2022-09-24 07:57:04 PDT
This is still reproducible.
Tim Nguyen (:ntim)
Comment 4 2022-09-24 08:09:57 PDT
EWS
Comment 5 2022-09-27 16:46:36 PDT
Committed 254935@main (25abb3d63d29): <https://commits.webkit.org/254935@main> Reviewed commits have been landed. Closing PR #4665 and removing active labels.
Radar WebKit Bug Importer
Comment 6 2022-09-27 16:47:19 PDT
Note You need to log in before you can comment on or make changes to this bug.