Do not expose -webkit-text CSS value in quirks mode https://bugs.webkit.org/show_bug.cgi?id=154164

Reviewed by Sam Weinig.

Rename -webkit-text value for color to -internal-document-text-color and only expose it for UA sheets.

Test: LayoutTests/fast/css/webkit-text-quirks-mode.html & LayoutTests/fast/css/internal-document-text-color-unexposed.html

* Source/WebCore/css/CSSValueKeywords.in:
* Source/WebCore/css/StyleColor.cpp:
(WebCore::StyleColor::isSystemColorKeyword):
* Source/WebCore/css/parser/CSSParserIdioms.cpp:
(WebCore::isValueAllowedInMode):
* Source/WebCore/css/quirks.css:
(table):
* Source/WebCore/style/StyleBuilderState.cpp:
(WebCore::Style::BuilderState::isColorFromPrimitiveValueDerivedFromElement):
(WebCore::Style::BuilderState::colorFromPrimitiveValue const):
* LayoutTests/fast/css/internal-document-text-color-unexposed-expected.html: Added.
* LayoutTests/fast/css/internal-document-text-color-unexposed.html: Added.
* LayoutTests/fast/css/webkit-text-quirks-mode-expected.html: Added.
* LayoutTests/fast/css/webkit-text-quirks-mode.html: Added.

Canonical link: https://commits.webkit.org/254935@main